# py-setup

./: README.md
simple_project/: .pre-commit-config.yaml  main.py  pyproject.toml
simple_project/templates/: layout.html
